feat(IAM): 增加用户批量状态契约
